<resources>
    <string name="app_name">Virtual Validator</string>
    <string name="InfoAppIntroduction">Virtual Validator Fue Diseño Para Cumplir La Necesidad Del Usuario En Promediar A Un Estudiante De Dicha Clase, Sabiendo La Nota De 5 Materias, Ademas Saber Cuantos Perdieron U Ganaron, Diviertete Profesor!</string>
    <string name="addNew_User">Promediar Nuevo Estudiante</string>
    <string name="seeUsers">Ver Estudiantes Añadidos</string>
    <string name="appInfo">¿Que es esta aplicación?</string>
    <string name="infoPersonalStudent">Informacion Personal Del Estudiante!</string>
    <string name="infoGradesStudent">Notas Personales Del Estudiante!</string>
    <string name="hintDocumentStudent">Ingrese Su Documento.</string>
    <string name="hintNameStudent">Ingrese Su Nombre.</string>
    <string name="hintAgeStudent">Ingrese Su Edad.</string>
    <string name="hintPhoneNumberStudent">Ingrese Su Numero telefonico.</string>
    <string name="hintAddressStudent">Ingrese Su Dirección.</string>
    <string name="txtSubject">Ingrese La Materia.</string>
    <string name="txtGrades">Ingrese La Nota</string>
    <string name="txtButtonSaveInformationStudent">Guardar Informacion Del Estudiante</string>
    <string name="InformationInfoStudentTittle">Informacion De Los Estudiantes</string>
    <string name="subjectAddeds">Materias</string>
    <string name="averageStudent">Promedio</string>
    <string name="statusStudent">Estado</string>
    <string name="btnCloseWindow">Cerrar</string>
    <string name="txtStatisticsInfo">Estadisticas De Los Estudiantes</string>
    <string name="txtStudentsRegisters">Estudiantes Registrados: </string>
    <string name="txtStudentsWinner">Estudiantes Que Ganaron: </string>
    <string name="txtStudentsLost">Estudiantes Que Perdieron: </string>
    <string name="txtStudentsRecover">Estudiantes Que Pueden Recuperar: </string>
</resources>