<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:paddingLeft="75dp"
        android:paddingTop="200dp"
        android:layout_gravity="center"
        android:layout_weight="1" >

        <Button
            android:id="@+id/MoreStudent"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:text="@string/addNew_User"/>

        <Button
            android:id="@+id/SeeStudents"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_marginTop="50dp"
            android:text="@string/seeUsers"/>

        <Button
            android:id="@+id/AppInfo"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_marginTop="50dp"
            android:text="@string/appInfo"/>


    </LinearLayout>

</LinearLayout>